[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

# features under this secion only compiled when downstream crates require it
[features]

# core library for networking
[lib]
name = "server_core"
path = "src/lib.rs"

# executable file source
[[bin]]
name = "game_server"

[dev-dependencies]

[dependencies]
anyhow = "1.0.71"
serde = "1.0.166"
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1",  features = ["full"] }
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
bytes = "1"


