[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libserver"
path = "src/lib.rs"

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
tokio = { version = "1",  features = ["full"] }
tokio-tungstenite = "0.19.0"
